--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,6 +1,6 @@
 .slika{
     padding: 5px;
-    width: 100px;
+    width: 200px;
     border-radius: 8px;
     opacity: 0.5;
 }
@@ -39,6 +39,9 @@
   @media (min-width:1000px) {
     .cont{
         padding-right:20px;
+    }
+    .slika{
+        width: 150px;
     }
 }
 .active{
